# drs

./: .env.example  .eslintrc.json  .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  Claude.md  DEBUGGING.md  DESIGN.md  DEVELOPMENT.md  NPM_SETUP_CHECKLIST.md  PUBLISHING_SETUP.md  README.md  TEMPORAL_EXECUTION_PLAN.md  WIKI_NEXT_FEATURES.md  clean-dist.mjs  mise.toml  package-lock.json  package.json  plan.md  pyproject.toml  test-example.ts  test-overlay.js  tsconfig.json
.drs/: context.md  describe-output.json  drs.config.yaml  review-output.json  visual-pr-explainer.html  wiki-state.json
.opencode/: opencode.jsonc
.vaibhav/: config.yaml
desktop/: .gitignore  DEV_TESTING.md  IMPLEMENTATION.md  README.md  components.json  forge.config.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: CUSTOM_AGENTS.md  EXTERNAL_PR_SECURITY.md  GITHUB_ACTIONS_INTEGRATION.md  GITLAB_CI_INTEGRATION.md  MIGRATING_TO_5.md  MODEL_OVERRIDES.md  PI_MIGRATION.md  PI_MIGRATION_PLAN.md  RELEASING.md  SKILLS.md  TEMPORAL.md  WORKFLOWS.md  claude-code-action-agents.md  claude-code-action-git-diff.md  fix-flow-design.md  pr-agent-research.md  runtime-port.md
drs/: __init__.py  claude_integration.py  context.py  main.py  reviewer.py
examples/: .env.example  .github-actions.yml  .gitlab-ci-child-pipeline.yml  .gitlab-ci-needs-strategy.yml  .gitlab-ci-review.yml  .gitlab-ci.yml  docker-compose.yml
scripts/: diagnose-review-failure.sh
src/: index.test.ts
(+361 files in other folders)
