[project]
name = "drs"
version = "0.1.0"
description = "Diff Review System - AI-powered GitLab merge request code reviewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-code-sdk",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
drs = "drs.main:cli_main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
